--- a/RecepieApp/Base.lproj/Main.storyboard
+++ b/RecepieApp/Base.lproj/Main.storyboard
@@ -111,13 +111,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="20s-J7-Qdj">
-                                <rect key="frame" x="0.0" y="55" width="393" height="763"/>
+                                <rect key="frame" x="0.0" y="55.000000000000007" width="393" height="763"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Lp-dM-guA" userLabel="ScrollContentContainer">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="672.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="728.66666666666663"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vfF-f6-cRX">
-                                                <rect key="frame" x="0.0" y="0.0" width="393" height="672.33333333333337"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="728.66666666666663"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="recepiePlaceholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="H0l-eJ-bO5" userLabel="recipieImage">
                                                         <rect key="frame" x="0.0" y="0.0" width="393" height="300"/>
@@ -126,7 +126,7 @@
                                                         </constraints>
                                                     </imageView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="vdC-4d-zeC">
-                                                        <rect key="frame" x="0.0" y="300" width="393" height="372.33333333333326"/>
+                                                        <rect key="frame" x="0.0" y="300" width="393" height="428.66666666666674"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Raspberry Banana Smoothie Great with Sauce" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iCB-og-XO6">
                                                                 <rect key="frame" x="8" y="7.9999999999999964" width="377" height="62.666666666666657"/>
@@ -156,6 +156,20 @@
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" pointerInteraction="YES" changesSelectionAsPrimaryAction="YES" role="primary" translatesAutoresizingMaskIntoConstraints="NO" id="uVF-cT-BET">
+                                                                <rect key="frame" x="8" y="376.33333333333337" width="199.66666666666666" height="44.333333333333314"/>
+                                                                <color key="tintColor" red="0.9295925498008728" green="0.60629564523696899" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <state key="normal" title="Button"/>
+                                                                <buttonConfiguration key="configuration" style="filled" title="Start Preparing" imagePadding="12" cornerStyle="capsule">
+                                                                    <imageReference key="image" image="play.circle" catalog="system" symbolScale="large"/>
+                                                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" scale="large" weight="semibold"/>
+                                                                    <directionalEdgeInsets key="contentInsets" top="12" leading="20" bottom="12" trailing="20"/>
+                                                                    <color key="baseBackgroundColor" red="0.9295925498008728" green="0.60629564523696899" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                </buttonConfiguration>
+                                                                <connections>
+                                                                    <segue destination="Bsa-3X-79F" kind="presentation" id="rzC-Pv-2Ge"/>
+                                                                </connections>
+                                                            </button>
                                                         </subviews>
                                                         <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
                                                     </stackView>
@@ -203,6 +217,70 @@
             </objects>
             <point key="canvasLocation" x="1919.8473282442746" y="6.3380281690140849"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="veF-jS-Uvo">
+            <objects>
+                <viewController id="Bsa-3X-79F" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IoB-rN-KxF">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ipC-LR-5GH">
+                                <rect key="frame" x="0.0" y="59" width="393" height="724"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wg6-TS-X7g">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="1339"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hDI-CO-yWZ">
+                                                <rect key="frame" x="0.0" y="0.0" width="393" height="1339"/>
+                                                <mutableString key="text">As long as the web has existed, this advice has rung true: “Don’t believe everything you see on the internet.” Whether it’s a personal blog, a tweet, a YouTube video, or a TikTok, anyone can say anything on here, and it’s tough to know whether or not they’re right (or even telling the truth).
+
+But we’re at an inflection point in internet literacy: Generative AI has reached a scary place, with tech good enough to mimic the likeness of celebrities and make these “clones” say whatever they want. To those in the know, these deepfakes might not be convincing yet, but what about the average social media user? It seems we’re rapidly approaching a point where the general public will start to believe these fraudulent videos are real, and that’s a frightening thought.
+
+There are three high-profile examples of this just from the past week or so. The first is Tom Hanks: The actor posted a screenshot on his Instagram from a video promoting a “dental plan,” with a spokesperson that looks like Tom Hanks if he had his teeth reinstalled. The video itself doesn’t appear to be public, and Hanks didn’t share it or the name of the company promoting it. But the assumption is some company or person made a deepfake of Tom Hanks to sell a dental product. As I mentioned, taking a good look at the image, you can already tell there’s something “off” about his face, and had we been able to see the video, it’s likely that the motion would have the stiff, uncanny valley look that so many AI deepfakes have.  As long as the web has existed, this advice has rung true: “Don’t believe everything you see on the internet.” Whether it’s a personal blog, a tweet, a YouTube video, or a TikTok, anyone can say anything on here, and it’s tough to know whether or not they’re right (or even telling the truth).
+
+But we’re at an inflection point in internet literacy: Generative AI has reached a scary place, with tech good enough to mimic the likeness of celebrities and make these “clones” say whatever they want. To those in the know, these deepfakes might not be convincing yet, but what about the average social media user? It seems we’re rapidly approaching a point where the general public will start to believe these fraudulent videos are real, and that’s a frightening thought.
+
+There are three high-profile examples of this just from the past week or so. The first is Tom Hanks: The actor posted a screenshot on his Instagram from a video promoting a “dental plan,” with a spokesperson that looks like Tom Hanks if he had his teeth reinstalled. The video itself doesn’t appear to be public, and Hanks didn’t share it or the name of the company promoting it. But the assumption is some company or person made a deepfake of Tom Hanks to sell a dental product. As I mentioned, taking a good look at the image, you can already tell there’s something “off” about his face, and had we been able to see the video, it’s likely that the motion would have the stiff, uncanny valley look that so many AI deepfakes have. </mutableString>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="hDI-CO-yWZ" firstAttribute="leading" secondItem="wg6-TS-X7g" secondAttribute="leading" id="BIa-Ih-zal"/>
+                                            <constraint firstItem="hDI-CO-yWZ" firstAttribute="top" secondItem="wg6-TS-X7g" secondAttribute="top" id="Goo-w8-sjx"/>
+                                            <constraint firstAttribute="bottom" secondItem="hDI-CO-yWZ" secondAttribute="bottom" id="Ncl-sr-IJN"/>
+                                            <constraint firstAttribute="trailing" secondItem="hDI-CO-yWZ" secondAttribute="trailing" id="Qou-fY-g9U"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="wg6-TS-X7g" firstAttribute="bottom" secondItem="fmo-f8-jiY" secondAttribute="bottom" id="JKH-jk-iLR"/>
+                                    <constraint firstItem="wg6-TS-X7g" firstAttribute="width" secondItem="MZ6-ss-soA" secondAttribute="width" id="kCa-43-e6U"/>
+                                    <constraint firstItem="wg6-TS-X7g" firstAttribute="trailing" secondItem="fmo-f8-jiY" secondAttribute="trailing" id="r6w-4z-woJ"/>
+                                    <constraint firstItem="wg6-TS-X7g" firstAttribute="top" secondItem="fmo-f8-jiY" secondAttribute="top" id="rHO-BX-gjU"/>
+                                    <constraint firstItem="wg6-TS-X7g" firstAttribute="leading" secondItem="fmo-f8-jiY" secondAttribute="leading" id="t0d-ne-e7Y"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="fmo-f8-jiY"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="MZ6-ss-soA"/>
+                            </scrollView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ucq-ME-ZPK"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ucq-ME-ZPK" firstAttribute="trailing" secondItem="ipC-LR-5GH" secondAttribute="trailing" id="DLy-C7-sqO"/>
+                            <constraint firstItem="ipC-LR-5GH" firstAttribute="leading" secondItem="ucq-ME-ZPK" secondAttribute="leading" id="Jbg-se-zWQ"/>
+                            <constraint firstItem="ipC-LR-5GH" firstAttribute="top" secondItem="ucq-ME-ZPK" secondAttribute="top" id="PUm-wa-did"/>
+                            <constraint firstItem="ucq-ME-ZPK" firstAttribute="bottom" secondItem="ipC-LR-5GH" secondAttribute="bottom" id="ZhF-PX-UXh"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Va-Td-KXT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2719.8473282442746" y="6.3380281690140849"/>
+        </scene>
         <!--Let's go! Chef-->
         <scene sceneID="nfU-56-Yhp">
             <objects>
@@ -225,6 +303,7 @@
     </scenes>
     <resources>
         <image name="heart" catalog="system" width="128" height="107"/>
+        <image name="play.circle" catalog="system" width="128" height="123"/>
         <image name="recepiePlaceholderImage" width="1768" height="1768"/>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
